--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.0-rc.2",
     "express": "^4.13.4",
+    "johnny-five": "^0.9.30",
     "lodash": "^4.2.1",
     "opencv": "^4.0.0",
-    "socket.io": "^1.4.5"
+    "reload": "^0.7.0",
+    "socket.io": "^1.4.5",
+    "uvc-control": "^1.0.2"
   },
   "devDependencies": {
     "babelify": "^7.2.0",
@@ -20,9 +24,12 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-nodemon": "^2.0.6",
+    "livereload": "^0.4.1",
+    "nodemon": "^1.9.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "reactify": "^1.1.1",
+    "tiny-lr": "^0.2.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   }
